Content and lists updated - Updated content on about page - Added now section to about page - Updated list styles (WIP)

--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -8,6 +8,6 @@
         <li><a href="/about" class="navigation__link">About</a></li>
         <li><a href="/blog" class="navigation__link">Blog</a></li>
         <li><a href="/hobbies" class="navigation__link">Hobbies</a></li>
-        <li><a href="#" class="navigation__link navigation__link--locked">&nbsp;Projects&nbsp;</a></li>
+        <li><a href="#" class="navigation__link navigation__link--locked" title="Coming soon...">&nbsp;Projects&nbsp;</a></li>
     </ul>
 </nav>
