--- a/src/assets/stylesheets/_navigation.scss
+++ b/src/assets/stylesheets/_navigation.scss
@@ -16,6 +16,16 @@
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
+
+        li {
+            &:before {
+                display: none;
+            }
+        }
+
+        @media screen and (max-width: 768px) {
+            padding-top: calc(48px + var(--gutter-m));
+        }
     }
 
     &--open {
@@ -37,7 +47,6 @@
 
     &__link {
         display: block;
-        width: 50vw;
         text-align: center;
         font-family: var(--ff-sans);
         font-size: 12vh;
@@ -51,6 +60,10 @@
             text-shadow: 0 0 .5em var(--c-primary),
                 0 0 1em var(--c-primary),
                 0 0 1.5em white;
+        }
+
+        @media screen and (max-width: 768px) {
+            font-size: 10vw;
         }
     }
     &__link--locked {
