Added blog post - Minor timeline style fix

--- a/src/assets/stylesheets/_base.scss
+++ b/src/assets/stylesheets/_base.scss
@@ -97,7 +97,9 @@ hr {
 
 p {
     margin-bottom: var(--gutter-m);
+}
 
+p, li {
     code {
         --corner: var(--gutter-s);
         background-color: #000;
