Blog update - Only show tags in blog tag navigation that have at least one post (consider drafts) - Updated blog entry

--- a/src/assets/stylesheets/_post.scss
+++ b/src/assets/stylesheets/_post.scss
@@ -177,6 +177,11 @@
             margin: var(--gutter-xl) auto;
         }
 
+        >*:not(p), p > img {
+            margin-top: var(--gutter-xl);
+            margin-bottom: var(--gutter-xl);
+        }
+
         p {
             img {
                 display: block;
