Updated blog post and responsive styles

--- a/src/assets/stylesheets/_post.scss
+++ b/src/assets/stylesheets/_post.scss
@@ -119,6 +119,7 @@
         max-width: calc(1200px + (2 * var(--gutter-m)));
         padding-left: var(--gutter-m);
         padding-right: var(--gutter-m);
+        line-height: 1.6;
         margin-left: auto;
         margin-right: auto;
 
