--- a/src/assets/stylesheets/_base.scss
+++ b/src/assets/stylesheets/_base.scss
@@ -25,8 +25,8 @@ body {
         border: 2px solid #121212;
     }
 
-    &.waiting {
-        opacity: 0;
+    @media screen and (max-width: 1200px) {
+        padding-top: calc(48px + (2 * var(--gutter-xs)) - var(--gutter-l));
     }
 }
 
