--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -16,10 +16,10 @@ layout: base.njk
 
         <div class="post__meta">
             <a href="{{ '/blog' | url }}">&larr; Back</a>
-            <div>{{ date | toFormattedDate }}, {{ date | toFormattedTime }}</div>
+            <div>{{ date | toFormattedDate }}</div>
             {%- if tags -%}
                 {%- for tag in tags -%}
-                    <a href="/tags/{{ tag }}">#{{ tag }}</a>
+                    <a href="/tag/{{ tag }}">#{{ tag }}</a>
                 {%- endfor -%}
             {%- endif -%}
         </div>
