--- a/src/assets/stylesheets/_section.scss
+++ b/src/assets/stylesheets/_section.scss
@@ -7,7 +7,7 @@
         max-width: var(--content-width);
         margin-left: auto;
         margin-right: auto;
-        // outline: 1px solid red;
+        font-size: var(--fs-md);
 
         &+.section__content {
             margin-top: var(--gutter-xl);
