--- a/src/assets/stylesheets/_post.scss
+++ b/src/assets/stylesheets/_post.scss
@@ -192,7 +192,7 @@
             margin: var(--gutter-xl) auto;
         }
 
-        >*:not(p), p > img {
+        >*:not(p, h1, h2, h3, h4, h5, h6), p > img {
             margin-top: var(--gutter-xl);
             margin-bottom: var(--gutter-xl);
         }
