New page + updates - Updated blog post - Added top 10 / tierlist page - Changed floating nav styles - Prepared tooltip script

--- a/src/assets/stylesheets/_floating-nav.scss
+++ b/src/assets/stylesheets/_floating-nav.scss
@@ -39,6 +39,10 @@
                     0% var(--corner)
                 );
             }
+
+            &+li {
+                border-top: 1px solid rgba(#fff, .1);
+            }
         }
     }
 }
