Better link formatting

--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -5,9 +5,9 @@
 <nav class="navigation">
     <a href="/" class="navigation__home icofont-home"></a>
     <ul>
-        <li><a href="/about" class="navigation__link">About</a></li>
-        <li><a href="/blog" class="navigation__link">Blog</a></li>
-        <li><a href="/hobbies" class="navigation__link">Hobbies</a></li>
-        <li><a href="#" class="navigation__link navigation__link--locked" title="Coming soon...">&nbsp;Projects&nbsp;</a></li>
+        <li><a href="{{ '/about' | url }}" class="navigation__link">About</a></li>
+        <li><a href="{{ '/blog' | url }}" class="navigation__link">Blog</a></li>
+        <li><a href="{{ '/hobbies' | url }}" class="navigation__link">Hobbies</a></li>
+        <li><a href="{{ '/coding' | url }}" class="navigation__link">Coding</a></li>
     </ul>
 </nav>
