Various style updates

--- a/src/assets/stylesheets/application.scss
+++ b/src/assets/stylesheets/application.scss
@@ -21,6 +21,7 @@
 @import 'pagination';
 @import 'post';
 @import 'prism';
+@import 'project';
 @import 'section';
 @import 'timeline';
 @import 'tooltip';
