--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -26,6 +26,7 @@
     --c-light: #ccc;
     --c-sb-track: transparent;
     --c-sb-thumb: var(--c-primary);
+    --c-primary-dark: hsl(39, 45%, 20%);
 
     // Content widths
     --w-narrow: 600px;
