--- a/src/assets/stylesheets/_project.scss
+++ b/src/assets/stylesheets/_project.scss
@@ -5,25 +5,75 @@
     align-items: center;
 
     &__preview {
+        position: relative;
+        z-index: 0;
         grid-area: 1 / 6 / -1 / -1;
+        
+        &:before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: var(--c-primary-dark);
+            mix-blend-mode: screen;
+            transition: all .3s ease;
+        }
+        
+        img {
+            display: block;
+        }
+
+        &:hover {
+            &:before {
+                opacity: 0;
+            }
+        }
+    }
+
+    &__subtitle {
+        font-family: var(--ff-sans);
+        opacity: .5;
+        font-size: var(--fs-sm);
+        text-transform: uppercase;
     }
     
+    &__title {
+        font-size: var(--fs-xl);
+    }
+
     &__details {
+        z-index: 1;
         grid-area: 1 / 1 / -1 / 7;
     }
 
     &__highlight {
         background-color: #222;
         border-radius: 10px;
+        padding: .5em;
+        margin: var(--gutter-m) 0;
         box-shadow: 0 0 20px rgba(#000, 0.5);
     }
 
+    &__meta {
+        font-family: var(--ff-mono);
+        opacity: .5;
+        font-size: var(--fs-sm);
+    }
+
     &:nth-of-type(odd) {
+        text-align: right;
+
         .project__preview {
             grid-column: 1 / 8;
         }
         .project__details {
             grid-column: 7 / -1;
         }
+    }
+
+    &+.project {
+        margin-top: var(--gutter-xl);
     }
 }
