sytle: responsive styles

--- a/src/about.njk
+++ b/src/about.njk
@@ -30,6 +30,7 @@ sitemap:
         <li>
           Skills<br>
           <div class="tags" style="margin-top: .5rem;">
+            <div class="tag">Angular</div>
             <div class="tag">HTML5</div>
             <div class="tag">CSS3 / SCSS</div>
             <div class="tag">Javascript</div>
