--- a/src/imprint.njk
+++ b/src/imprint.njk
@@ -3,3 +3,38 @@ title: Imprint
 sitemap:
   priority: 0.1
 ---
+
+<div class="content">
+  <h1>Imprint & Legal Information</h1>
+
+  <hr>
+
+  <h2>Contact information</h2>
+
+  <strong>Managed by</strong>
+  <p>
+    Maximilian Boll<br />
+    Mainz, Germany<br />
+    Mail: <a href="mailto:legal@makkusu.dev" rel="nofollow">legal@makkusu.dev</a><br />
+    Twitter: <a href="https://twitter.com/MyXoToD" target="_blank" rel="nofollow">@MyXoToD</a>
+  </p>
+
+  <hr>
+
+  <h2>Privacy information</h2>
+
+  <p>This website does not use any kind of tracking or analytic tools. Server settings for any kind of logs are turned off.</p>
+  <p>Feel free to check out the source code of this website on <a href="https://github.com/MyXoToD/makkusu.dev" rel="nofollow">GitHub</a>.</p>
+
+  <hr>
+
+  <h2>Cookies</h2>
+
+  <p>No Cookies.</p>
+
+  <hr>
+
+  <h2>Personal data</h2>
+
+  <p>No personal data is collected.</p>
+</div>
