--- a/src/_includes/topbar.njk
+++ b/src/_includes/topbar.njk
@@ -2,6 +2,9 @@
   <div class="topbar__inner">
     <h1 class="topbar__title"><a href="{{ '/' | url }}">マックス</a></h1>
 
+    <label class="mobile-nav-button">
+      <input type="checkbox">
+    </label>
     <nav class="main-nav">
       <ul>
         <li><a href="{{ '/about' | url }}" class="main-nav__link{% if menuactive == 'about' %} main-nav__link--active{% endif %}">About</a></li>
