--- a/src/assets/stylesheets/_base.scss
+++ b/src/assets/stylesheets/_base.scss
@@ -18,12 +18,12 @@ a {
 }
 
 ::selection {
-  background-color: var(--c-accent);
-  color: var(--c-copy);
+  background-color: var(--c-copy);
+  color: var(--c-elevation-0);
 }
 ::-moz-selection {
-  background-color: var(--c-accent);
-  color: var(--c-copy);
+  background-color: var(--c-copy);
+  color: var(--c-elevation-0);
 }
 
 .content {
@@ -32,6 +32,7 @@ a {
   padding: 2rem 0;
   // font-size: 18px;
   line-height: 1.4;
+  overflow-x: clip;
   
   @media (prefers-reduced-motion: no-preference) {
     opacity: 0;
@@ -53,10 +54,11 @@ a {
     font-size: clamp(40px, 8vw, 60px);
     font-weight: 900;
     // line-height: 1;
-    background-image: linear-gradient(to bottom right, var(--c-accent), #3C5F9F);
-    background-attachment: fixed;
-    background-clip: text;
-    color: transparent;
+    // background-image: linear-gradient(to bottom right, var(--c-accent), #3C5F9F);
+    // background-attachment: fixed;
+    // background-clip: text;
+    // color: transparent;
+    color: var(--c-accent);
     margin-bottom: 2rem;
   }
   
@@ -67,10 +69,11 @@ a {
     font-family: var(--ff-sans);
     margin-bottom: 2rem;
     display: flex;
-    background-image: linear-gradient(to bottom right, var(--c-accent), #3C5F9F);
-    background-attachment: fixed;
-    background-clip: text;
-    color: transparent;
+    // background-image: linear-gradient(to bottom right, var(--c-accent), #3C5F9F);
+    // background-attachment: fixed;
+    // background-clip: text;
+    // color: transparent;
+    color: var(--c-accent);
   }
 
   h3 {
