--- a/src/assets/stylesheets/_hobby.scss
+++ b/src/assets/stylesheets/_hobby.scss
@@ -9,7 +9,7 @@
     translate: 0% 100%;
     animation: hobby-fade-in both linear;
     animation-timeline: view();
-    animation-range: entry;
+    animation-range: entry 0% entry 50%;
   }
 
   &__image {
@@ -35,5 +35,28 @@
   to {
     opacity: 1;
     translate: 0% 0%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .hobby {
+    &__image {
+      grid-column: 1 / -1;
+
+      img {
+        height: 150px;
+        scale: unset;
+        clip-path: unset;
+      }
+    }
+
+    &__data {
+      grid-column: 1 / -1;
+      padding: unset;
+    }
+
+    &+.hobby {
+      margin-top: 2rem;
+    }
   }
 }
