--- a/src/assets/stylesheets/_pagination.scss
+++ b/src/assets/stylesheets/_pagination.scss
@@ -7,12 +7,12 @@
   margin: 2rem auto;
 
   >*+* {
-    margin-left: var(--gutter-m);
+    margin-left: 1rem;
   }
 
   &__link {
     display: block;
-    border: 2px solid var(--c-copy);
+    border: 2px solid var(--c-copy) !important;
     opacity: .5;
     padding: .5rem 1rem;
     border-radius: 5px;
