--- a/src/assets/stylesheets/_post.scss
+++ b/src/assets/stylesheets/_post.scss
@@ -13,7 +13,7 @@
     scale: 0.5;
     animation: fadeInPost both linear;
     animation-timeline: view();
-    animation-range: entry;
+    animation-range: entry 0% entry 50%;
   }
 
   &:hover {
@@ -48,8 +48,9 @@
       position: absolute;
       inset: 0;
       z-index: 1;
-      background-color: var(--c-elevation-1);
+      background-color: var(--c-accent);
       mix-blend-mode: screen;
+      opacity: .5;
       transition: opacity .3s ease;
     }
     
@@ -269,6 +270,13 @@
     }
   }
 
+  *:not(pre) > code {
+    background-color: var(--c-elevation-1);
+    font-family: var(--ff-mono);
+    padding: .25rem;
+    border-radius: 3px;
+  }
+
   iframe,
   pre,
   p:has(img) {
@@ -305,5 +313,55 @@
 @keyframes progress {
   to {
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .post {
+    gap: 1rem;
+
+    &__image {
+      grid-column: 1 / 5;
+      aspect-ratio: 4 / 3;
+
+      img {
+        aspect-ratio: 4 / 3;
+      }
+    }
+
+    &__data {
+      grid-column: 5 / -1;
+    }
+
+    &:nth-child(even) {
+      .post__image {
+        grid-column: 9 / -1;
+      }
+
+      .post__data {
+        grid-column: 1 / 9;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .post {
+    &__image {
+      grid-row: 1;
+      grid-column: 1 / -1 !important;
+      aspect-ratio: 16 / 9;
+
+      img {
+        aspect-ratio: 16 / 9;
+      }
+    }
+
+    &__data {
+      grid-row: 2;
+      grid-column: 1 / -1 !important;
+      text-align: left;
+      align-items: flex-start;
+    }
   }
 }
