updated imprint information

--- a/src/imprint.njk
+++ b/src/imprint.njk
@@ -24,7 +24,7 @@ sitemap:
   <h2>Privacy information</h2>
 
   <p>This website does not use any kind of tracking or analytic tools. Server settings for any kind of logs are turned off.</p>
-  <p>Feel free to check out the source code of this website on <a href="https://github.com/MyXoToD/makkusu.dev" rel="nofollow">GitHub</a>.</p>
+  <p>Feel free to check out the source code of this website on <a href="https://github.com/MyXoToD/makkusu.dev" target="_blank" rel="nofollow">GitHub</a>.</p>
 
   <hr>
 
@@ -37,4 +37,8 @@ sitemap:
   <h2>Personal data</h2>
 
   <p>No personal data is collected.</p>
+
+  <h2>Credits</h2>
+
+  <p>You can find detailed information about photo credits etc. in the <a href="https://github.com/MyXoToD/makkusu.dev/blob/main/README.md" rel="nofollow" target="_blank">README.md</a> file</p>
 </div>
