--- a/src/about.njk
+++ b/src/about.njk
@@ -9,7 +9,7 @@ sitemap:
   <div class="grid">
     <div class="grid__col-12 grid__col-4-sm grid__col-5-md">
       <div class="about-image">
-        <img src="/assets/images/max.png" alt="">
+        <img src="/assets/images/max.webp" alt="Maximilian Boll">
       </div>
     </div>
     <div class="grid__col-12 grid__col-8-sm grid__col-7-md grid__col--vcentered">
