--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -21,7 +21,7 @@ layout: base
   <article class="post-detail">
     <div class="post-detail__meta">
       <div class="post-detail__avatar">
-        <img src="{{ '/assets/images/avatar.jpg' | url }}" alt="Maximilian Boll">
+        <img src="{{ '/assets/images/avatar.webp' | url }}" alt="Maximilian Boll">
       </div>
       <div class="post-detail__author">Maximilian Boll</div>
       <div class="post-detail__date">{{ date | formatDateFull }}</div>
