--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+    <meta name="description" content="Private blog and portfolio of frontend web developer Maximilian Boll">
+    <meta name="robots" content="INDEX,FOLLOW">
+    <meta http-equiv="content-Language" content="en">
+    <meta name="keywords" content="maximilian boll, web developer, frontend developer, javascript, typescript, angular, eleventy">
+    <meta name="author" content="Maximilian Boll">
+
     <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/images/favicons/apple-touch-icon.png' | url }}">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/images/favicons/favicon-32x32.png' | url }}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/images/favicons/favicon-16x16.png' | url }}">
