Added 11ty generator meta tag

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -10,6 +10,7 @@
     <meta http-equiv="content-Language" content="en">
     <meta name="keywords" content="maximilian boll, web developer, frontend developer, javascript, typescript, angular, eleventy">
     <meta name="author" content="Maximilian Boll">
+    <meta name="generator" content="Eleventy">
 
     <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/images/favicons/apple-touch-icon.png' | url }}">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/images/favicons/favicon-32x32.png' | url }}">
