--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,7 +1,7 @@
 <footer class="footer">
-    made with <span style="color:red">&hearts;</span> & ☕ &mdash; <a href="/imprint">Imprint</a> &mdash; <a href="/feed.xml">RSS</a> &mdash; 
-    <a href="https://webring.xxiivv.com/#makkusu" target="_blank">
-        <img src="https://webring.xxiivv.com/icon.white.svg" alt="XXIIVV webring"/>
-    </a> 
-    &mdash; またね。
+  made with <span style="color:red">&hearts;</span> & ☕ &mdash; <a href="/imprint">Imprint</a> &mdash; <a href="/feed.xml">RSS</a> &mdash; 
+  <a href="https://webring.xxiivv.com/#makkusu" target="_blank">
+    <img src="https://webring.xxiivv.com/icon.white.svg" alt="XXIIVV webring" width="24" height="24">
+  </a> 
+  &mdash; またね。
 </footer>
