--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -12,6 +12,8 @@
     <meta name="author" content="Maximilian Boll">
     <meta name="generator" content="Eleventy">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
     <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/images/favicons/apple-touch-icon.png' | url }}">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/images/favicons/favicon-32x32.png' | url }}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/images/favicons/favicon-16x16.png' | url }}">
@@ -31,8 +33,8 @@
     <link rel="preload" href="{{ '/assets/fonts/aoyagireisyosimo/aoyagireisyosimo2.svg' }}" as="font">
     <link rel="preload" href="{{ '/assets/fonts/aoyagireisyosimo/aoyagireisyosimo2.woff' }}" as="font">
     <link rel="preload" href="{{ '/assets/fonts/aoyagireisyosimo/aoyagireisyosimo2.woff2' }}" as="font">
-    <link rel="stylesheet" href="{{ '/assets/stylesheets/application.min.css' | url }}">
-    <link href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism-okaidia.css" rel="stylesheet" />
+    <link rel="stylesheet" href="{{ '/assets/stylesheets/application.min.css' | url }}" media="screen">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism-okaidia.css" media="screen">
 
     <!--
      ___    ___   ________   __   ___  __   ___  __    __   ______   __    __       _____     _______   __      __
