--- a/src/assets/stylesheets/_hobby.scss
+++ b/src/assets/stylesheets/_hobby.scss
@@ -9,7 +9,7 @@
     translate: 0% 100%;
     animation: hobby-fade-in both linear;
     animation-timeline: view();
-    animation-range: entry 0% entry 50%;
+    animation-range: entry 0% entry 50vh;
   }
 
   &__image {
