style: fixed color of 404 text

--- a/src/assets/stylesheets/_404.scss
+++ b/src/assets/stylesheets/_404.scss
@@ -11,7 +11,7 @@
 
 h1.glitch {
 position: relative;
-color: white;
+color: var(--c-copy);
 font-size: 4vw;
 letter-spacing: .5em;
 text-align: center;
