--- a/src/assets/stylesheets/application.scss
+++ b/src/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import 'fonts';
 @import 'fontawesome/fontawesome.scss';
 @import 'fontawesome/brands.scss';
+@import 'fontawesome/solid.scss';
 @import 'base';
 
 /* Components */
