--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -29,7 +29,8 @@
     <title>{{ title }} - {{ site.title }}</title>
 
     <link rel="stylesheet" href="{{ '/assets/stylesheets/application.min.css' | url }}?v={{ site.builtAt }}" media="screen">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism-okaidia.css" media="screen">
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism-okaidia.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism-okaidia.css" media="screen"></noscript>
 
     <!--
      ___    ___   ________   __   ___  __   ___  __    __   ______   __    __       _____     _______   __      __
