--- a/src/assets/stylesheets/_timeline.scss
+++ b/src/assets/stylesheets/_timeline.scss
@@ -55,7 +55,7 @@
     }
 
     &:after {
-      content: attr(data-date-from) " - " attr(data-date-until);
+      content: attr(data-date-from);
       position: absolute;
       top: 0;
       left: 1rem;
@@ -65,6 +65,10 @@
       color: var(--c-accent);
       padding: 0 .5rem;
       background-color: var(--c-elevation-0);
+    }
+
+    &[data-date-until]:after {
+      content: attr(data-date-from) " - " attr(data-date-until);
     }
   }
 }
