Updated meta data

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <meta name="description" content="Private blog and portfolio of frontend web developer Maximilian Boll">
+    <meta name="description" content="makkusu.dev - Maximilian Boll, frontend web-developer in Mainz/Germany">
     <meta name="robots" content="INDEX,FOLLOW">
     <meta http-equiv="content-Language" content="en">
-    <meta name="keywords" content="maximilian boll, web developer, frontend developer, javascript, typescript, angular, eleventy">
+    <meta name="keywords" content="maximilian boll, web developer, frontend developer, javascript, typescript, japanese, angular, eleventy">
     <meta name="author" content="Maximilian Boll">
     <meta name="generator" content="Eleventy">
 
